--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <body>
         <canvas id="Frame" width="480" height="320"></canvas>
         <button id="runButton">Start Game</button>
+        <p>By Collin MacTaggart</p>
         <script src="Index.js"></script>
     </body>
 </html>
